config/prow/grafana-dashboard/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: grafana-dashboard
  name: grafana
  annotations:
    # Change this to your issuer when using cert-manager. Does
    # nothing when not using cert-manager.
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: public-iks-k8s-nginx
spec:
  backend:
    serviceName: grafana
    servicePort: 80
  rules:
    - host: grafana.ppc64le-cloud.org
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
  tls:
    - hosts:
        - grafana.ppc64le-cloud.org
      secretName: ppc64le-cloud
